# raftrust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: storage_bench.rs
crates/raft-admin/: Cargo.toml  build.rs
crates/raft-admin/proto/: kv.proto
crates/raft-admin/src/: main.rs
crates/raft-chaos/: Cargo.toml
crates/raft-chaos/src/: clock.rs  disk.rs  harness.rs  lib.rs  network.rs
crates/raft-client/: Cargo.toml  build.rs
crates/raft-client/src/: client.rs  lease.rs  lib.rs  watch.rs
crates/raft-common/: Cargo.toml
crates/raft-common/src/: config.rs  error.rs  lib.rs  metrics.rs  types.rs
crates/raft-consensus/: Cargo.toml  build.rs
crates/raft-consensus/src/: election.rs  leadership_transfer.rs  lib.rs  log.rs  membership.rs  message.rs  node.rs  read_index.rs  replication.rs  snapshot.rs  state.rs  tick.rs
crates/raft-consensus/src/rpc/: client.rs  server.rs
crates/raft-mvcc/: Cargo.toml
crates/raft-mvcc/src/: gc.rs  lib.rs  mvcc.rs  transaction.rs  ttl.rs  version.rs
crates/raft-server/: Cargo.toml  build.rs
crates/raft-server/src/: admin_service.rs  apply.rs  backup.rs  http.rs  kv_service.rs  lease.rs  lease_service.rs  lib.rs  main.rs  server.rs  watch.rs  watch_service.rs
crates/raft-server/tests/: cluster_test.rs
crates/raft-storage/: Cargo.toml
crates/raft-storage/src/: bloom.rs  engine.rs  lib.rs  lsm.rs
crates/raft-storage/src/compaction/: leveled.rs  manifest.rs  mod.rs
crates/raft-storage/src/memtable/: mod.rs
crates/raft-storage/src/sstable/: block.rs  footer.rs  mod.rs  reader.rs  writer.rs
crates/raft-storage/src/wal/: reader.rs  record.rs  writer.rs
docs/: limitations.md
docs/decisions/: 001-raft-over-paxos.md  002-lsm-tree-over-btree.md  003-joint-consensus-membership.md  004-occ-transactions.md  005-grpc-for-rpcs.md
docs/internals/: raft-consensus.md  storage-engine.md
proto/: admin.proto  lease.proto  membership.proto  raft.proto  watch.proto
