[workspace]
resolver = "2"
members = [
    "crates/raft-common",
    "crates/raft-storage",
    "crates/raft-mvcc",
    "crates/raft-consensus",
    "crates/raft-server",
    "crates/raft-client",
    "crates/raft-admin",
    "crates/raft-chaos",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Louis-Philip Marcoux"]
license = "MIT"
repository = "https://github.com/louisphilipmarcoux/raft"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Hashing / checksums
crc32fast = "1"

# Bloom filter bit manipulation
bitvec = "1"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Streaming
tokio-stream = "0.1"

# Misc
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
raft-common = { version = "0.1.1", path = "crates/raft-common" }
raft-storage = { version = "0.1.1", path = "crates/raft-storage" }
raft-mvcc = { version = "0.1.1", path = "crates/raft-mvcc" }
raft-consensus-core = { version = "0.1.1", path = "crates/raft-consensus" }
raft-server = { version = "0.1.1", path = "crates/raft-server" }
raft-client = { version = "0.1.1", path = "crates/raft-client" }
raft-admin = { version = "0.1.1", path = "crates/raft-admin" }
raft-chaos = { version = "0.1.1", path = "crates/raft-chaos" }
