[package]
name = "raft-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin CLI for the raft distributed KV store: put, get, delete, status, transfer"

[dependencies]
raft-common = { workspace = true }
raft-client = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
