[package]
name = "raft-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Client library for the raft distributed KV store with automatic leader tracking and exponential backoff"
readme = "../../README.md"

[dependencies]
raft-common = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
