[package]
name = "raft-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types, configuration, error handling, and Prometheus metrics for the raft distributed KV store"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prometheus = { workspace = true }
