[package]
name = "raft-consensus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Raft consensus implementation: election, replication, snapshots, linearizable reads, leadership transfer, joint consensus"

[dependencies]
raft-common = { workspace = true }
raft-storage = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crc32fast = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
