[package]
name = "raft-mvcc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
raft-common = { workspace = true }
raft-storage = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
