[package]
name = "raft-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
raft-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
crc32fast = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
raft-mvcc = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
path = "../../benches/storage_bench.rs"
